<package format="3">
  <name>vario700_sensorrig</name>
  <version>0.1.0</version>
  <description>First version of a Fendt Vario700 and a sensor setup containing 6 mono-cameras, a ZED2i and an Ouster OS0 for environmental perception of the tractor.</description>
  <maintainer email="gunreben@wifa.uni-leipzig.de">Lorenz Gunreben</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

